# mask-x

./: .gitignore  README.md  pyproject.toml  requirements.txt
TianyuXie/: PROJECT_STRUCTURE.md  README.md  models_placeholder.txt
TianyuXie/docs/: experiments_summary_fuss_only.md
TianyuXie/methods/baseline/: evaluate_existing_masks.py  evaluate_fuss_baseline.py  mask.py  mask_config.example.yaml  run_mask.py
TianyuXie/methods/method_1_dsp_spp/: dsp_spp_method.py  evaluate_fuss_dsp_spp.py  method_1_dsp_spp.md  run_marine_dsp_spp.py
TianyuXie/methods/method_2_ml_lgbm_crf/: evaluate_fuss_ml_lgbm_crf.py  method_2_ml_lgbm_crf.md  ml_lgbm_crf_method.py  run_marine_ml_lgbm_crf.py
TianyuXie/methods/method_3_dl_unet/: dl_unet_method.py  (+4 more)
config/: mask_config.example.yaml
docs/: experiments_summary_fuss_only.md
mask/: mask.py  mask_config.yaml  run_mask.py
methods/method_1_dsp_spp/: dsp_spp_method.py  evaluate_fuss_dsp_spp.py  run_marine_dsp_spp.py
methods/method_2_ml_lgbm_crf/: evaluate_fuss_ml_lgbm_crf.py  method_2_ml_lgbm_crf.md  ml_lgbm_crf_method.py  run_marine_ml_lgbm_crf.py
methods/method_3_dl_unet/: dl_unet_method.py  evaluate_fuss_dl_unet.py  method_3_dl_unet.md  run_marine_dl_unet.py  train_fuss_dl_unet.py
methods/method_4_hybrid_dsp_ml/: evaluate_fuss_hybrid_dsp_ml.py  hybrid_dsp_ml_method.py  method_4_hybrid_dsp_ml.md  run_marine_hybrid_dsp_ml.py
methods/method_5_hybrid_dsp_dl/: evaluate_fuss_hybrid_dsp_dl.py  hybrid_dsp_dl_method.py  method_5_hybrid_dsp_dl.md  run_marine_hybrid_dsp_dl.py  train_fuss_hybrid_dsp_dl.py
utils/: paths.py
(+9 files in other folders)
