[tool.poetry]
name = "mask-x"
version = "0.1.0"
description = ""
authors = ["Bram Cuyx <bram.cuyx@vliz.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Nmf = {git = "git@gitlab.vliz.be:research/nmf.git", branch = "master"}
soundfile = "^0.12.1"
pandas = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
