[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "*"
scipy = "*"
soundfile = "*"
matplotlib = "*"
PyYAML = "*"
lightgbm = "*"
scikit-learn = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"